# SuicideBot-Cpp

./: CMakeLists.txt  README.md
src/: app_signal.hpp  main.cpp
